examples/test/testpolicy3585.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3585
  namespace: namespace37
spec:
  podSelector:
    matchLabels:
      key45: value42
      key1: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key44: value33
          key13: value44
          key20: value13
      podSelector:
        matchLabels:
          key3: value37
